# LightWriter

./: .gitignore  README.md  pyproject.toml  pytest.ini  test.txt
.github/workflows directory/: tests.yml
docs/: API.md  DEVELOPMENT.md  LIGHTWRITER CLI GUIDE.md  LIGHTWRITER_GUIDE.md  TODO.md  instructions.md
frontend/: package.json  pnpm-lock.yaml
src/core/extractors/: citation_extractor.py  equation_extractor.py  identifier_extractor.py  pdf_extractor.py  reference_extractor.py
src/core/metadata/: consolidator.py  models.py
src/core/store/: lightrag.py  manager.py
src/processing/: pipeline.py  steps.py
src/utils/: constants.py  logger.py
storage/: metadata.json
storage/processed/test_results/citations/: Brown et al. - 2020 - Pediatric acute lymphoblastic leukemia, version 2.2020-annotated_citations.json  Brown et al. - 2020 - Pediatric acute lymphoblastic leukemia, version 2.2020-annotated_citations.txt  Caldas, Soares - 2023 - A Temporal Fusion Transformer for Long-Term Explainable Prediction of Emergency Department Overcrowding-annotated_citations.json  Caldas, Soares - 2023 - A Temporal Fusion Transformer for Long-Term Explainable Prediction of Emergency Department Overcrowding-annotated_citations.txt  Chen et al. - 2023 - TSMixer An All-MLP Architecture for Time Series Forecasting-annotated_citations.json  Chen et al. - 2023 - TSMixer An All-MLP Architecture for Time Series Forecasting-annotated_citations.txt  Choo et al. - 2023 - Deep-learning-based personalized prediction of absolute neutrophil count recovery and comparison with clinicians-annotated_citations.json  Choo et al. - 2023 - Deep-learning-based personalized prediction of absolute neutrophil count recovery and comparison with clinicians-annotated_citations.txt  Escobar et al. - 2020 - Automated Identification of Adults at Risk for In-Hospital Clinical Deterioration-annotated_citations.json  Escobar et al. - 2020 - Automated Identification of Adults at Risk for In-Hospital Clinical Deterioration-annotated_citations.txt
tests/: test_citations.py  test_extractors.py  test_pdf_processing.py  test_pipeline.py  test_store.py
